--- a/mini-gerryclusters-scaffold.ipynb
+++ b/mini-gerryclusters-scaffold.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "The K-means algorithm takes in an ensemble which is a numpy array of shape\n",
     "`(number of plans) x (number of districts per plan) x (number of precincts)`\n",
+    "Typically this array is binary, so that every plan contains `(number of districts per plan)` binary vectors with a 1 indicating the precinct is in that district. But the method works just fine for other choices e.g. population weighting.\n",
     "\n",
     "## Output format\n",
     "\n",
@@ -24,13 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7d4e4d8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
     "import minigerryclusters\n",
     "import geopandas as gpd"
